--- a/my-project/package.json
+++ b/my-project/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "npx vite build"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
